[metadata]
name = VortexCorrelationClustering
description = Clustering Method to find Vortices in a databse of moving spatial objects in two dimensions
author = Yannick Wölker
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2.0
license_file = LICENSE.txt

## These need to be filled in by the author!
# For details see: https://pypi.org/classifiers/

classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    # Dont change this one
    License :: OSI Approved :: Apache License 2.0

## Add your email here
author_email = ywoe@informatik.uni-kiel.de